[package]
name = "tododay"
version = "1.0.0"
description = "Desktop application designed to make daily todos simple "
authors = ["JonShort"]
license = "MIT"
repository = "https://github.com/JonShort/tododay"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.3", features = ["shell-open"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dependencies.sqlx]
version = "0.6"
default-features = false
features = ["macros", "migrate", "offline", "runtime-tokio-rustls", "sqlite"]

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true # Automatically strip symbols from the binary.
